# InstrumentKit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  README  README.md  README.rst  dev-requirements.txt  foobar.travis.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  ik-ci.yml  test.yml
doc/examples/: _owon_capture_common.py  _owon_capture_debug.py  _owon_capture_stable.py  ex_generic_scpi.ipynb  ex_generic_scpi.py  ex_hp3325.py  ex_hp3456.py  ex_keithley195.ipynb  ex_keithley195.py  ex_keithley6514.ipynb  ex_maui.ipynb  ex_oscilloscope_waveform.ipynb  ex_oscilloscope_waveform.py  ex_owon_sds1104.py  ex_qubitekk_gui.py  ex_qubitekk_mc1.py  ex_qubitekkcc.py  ex_qubitekkcc_simple.py  ex_tds2004b.py  ex_tekdpo70000.ipynb  ex_tektronic.py  ex_thorlabslcc.py  ex_thorlabssc10.py  ex_thorlabstc200.py  ex_topticatopmode.py  example2.py  owon_esp32_trigger_jig.md  owon_esp32_trigger_jig_runner.py  owon_runner_refactor_20260402.md  owon_safe_scope_smoke.py  owon_scope_state_dump.py  scope.html  srs_DG645.ipynb  srs_DG645.py
doc/owon/: DOS1104_SCPI_Command_Matrix.md
doc/source/: acknowledgements.rst  conf.py  index.rst  intro.rst
instruments/: .pylintrc  __init__.py  config.py  errors.py  hp3456.out  named_struct.py  optional_dep_finder.py  requirements.txt  serial_fns.py  setup.py  units.py  util_fns.py
instruments/Ondax/: __init__.py
instruments/abstract_instruments/: __init__.py  cryomagnetics_instrument.py  electrometer.py  function_generator.py  instrument.py  multimeter.py  optical_spectrum_analyzer.py  oscilloscope.py  power_supply.py
instruments/agilent/: __init__.py  agilent33220a.py  agilent34410a.py
instruments/cryomagnetics/: __init__.py  cryomagnetics_4g.py  cryomagnetics_lm510.py
instruments/doc/: Makefile
instruments/fluke/: __init__.py  fluke3000.py
instruments/generic_scpi/: __init__.py  scpi_function_generator.py  scpi_instrument.py  scpi_multimeter.py
instruments/gentec_eo/: __init__.py  blu.py
instruments/glassman/: __init__.py  glassmanfr.py
instruments/holzworth/: __init__.py  holzworth_hs9000.py
instruments/hp/: __init__.py  hp3456a.py  hp6624a.py  hp6632b.py  hp6652a.py  hpe3631a.py
instruments/instruments/: __init__.py  config.py  errors.py  units.py  util_fns.py
instruments/keithley/: __init__.py  keithley195.py  keithley2182.py  keithley485.py  keithley580.py  keithley6220.py  keithley6485.py  keithley6514.py  keithley6517b.py
instruments/lakeshore/: __init__.py  lakeshore340.py  lakeshore370.py  lakeshore475.py
instruments/minghe/: __init__.py  mhs5200a.py
instruments/newport/: __init__.py  agilis.py  errors.py  newport_pmc8742.py  newportesp301.py
instruments/ondax/: __init__.py  lm.py
instruments/other/: __init__.py
instruments/oxford/: __init__.py  oxforditc503.py
instruments/phasematrix/: __init__.py  phasematrix_fsw0020.py
instruments/picowatt/: __init__.py  picowattavs47.py
instruments/qubitekk/: __init__.py  cc1.py  mc1.py
instruments/rigol/: __init__.py  rigoldp832.py  rigolds1000.py
instruments/srs/: __init__.py  srs345.py  srs830.py  srsctc100.py  srsdg645.py
license/: ATTRIBUTION.TXT  AUTHOR.TXT  LICENSE.TXT
matlab/: matlab-example.ipynb  open_instrument.m
python/: README.TXT  example1-1.py  example1.py  example2.py  example3.py  setup.py
tests/: __init__.py  test_base_instrument.py  test_config.py  test_named_struct.py  test_package.py  test_split_str.py  test_test_utils.py  test_util_fns.py
(+817 files in other folders)
