[metadata]
name = instrumentkit
version = attr: instruments._version.version
description = Test and measurement communication library
author = Steven Casagrande
author_email = stevencasagrande@gmail.com
url = https://www.github.com/instrumentkit/InstrumentKit
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    pint>=0.16.1,<0.21.0
    pyserial>=3.3
    python-usbtmc
    python-vxi11>=0.8
    pyusb>=1.0
    pyvisa>=1.9
    ruamel.yaml>=0.16,<0.17
    typing_extensions>=4.0.1

[options.extras_require]
numpy = numpy
dev =
    coverage
    hypothesis~=6.56.0
    mock
    pytest-cov
    pytest-mock
    pytest-xdist
    pytest~=7.2.0
    pyvisa-sim
    six

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
